edited edituser template

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/EditUser/profileOverview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/EditUser/profileOverview.html
@@ -15,7 +15,7 @@
                 <table class="tg">
                     <tr>
                         <td class="tg-lap0">Username:</td>
-                        <td class="tg-lap0"><input th:name="username" type="text" th:placeholder="${person.username}" readonly/></td>
+                        <td class="tg-lap0"><input th:name="username" type="text" th:placeholder="${user.username}" readonly/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Nachname:</td>
@@ -27,7 +27,7 @@
                     </tr>
                     <tr>
                         <td class="tg-lap0">E-Mail:</td>
-                        <td class="tg-lap0"><input class="loginTextfield" th:name="email" type="email" th:placeholder="${person.email}"/></td>
+                        <td class="tg-lap0"><input class="loginTextfield" th:name="email" type="email" th:placeholder="${user.email}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Straße:</td>
