refactored person.get.. to username. in admin_Useredit, _Usermanagement and EditUser

--- a/rhinoshareapp/src/main/resources/templates/Admin/admin_userEdit.html
+++ b/rhinoshareapp/src/main/resources/templates/Admin/admin_userEdit.html
@@ -17,39 +17,39 @@
                 <table class="tg">
                     <tr>
                         <td class="tg-lap0">Username:</td>
-                        <td class="tg-lap0"><input th:name="username" type="text" th:placeholder="${person.username}"/></td>
+                        <td class="tg-lap0"><input th:name="username" type="text" th:placeholder="${user.username}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Nachname:</td>
-                        <td class="tg-lap0"><input th:name="name" type="text" th:placeholder="${person.name}"/></td>
+                        <td class="tg-lap0"><input th:name="name" type="text" th:placeholder="${user.name}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Vorname:</td>
-                        <td class="tg-lap0"><input th:name="surname" type="text" th:placeholder="${person.surname}"/></td>
+                        <td class="tg-lap0"><input th:name="surname" type="text" th:placeholder="${user.surname}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">E-Mail Adresse:</td>
-                        <td class="tg-lap0"><input th:name="email" type="email" th:placeholder="${person.email}"/></td>
+                        <td class="tg-lap0"><input th:name="email" type="email" th:placeholder="${user.email}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Straße:</td>
-                        <td class="tg-lap0"><input th:name="street" type="text" th:placeholder="${person.address.street}"/></td>
+                        <td class="tg-lap0"><input th:name="street" type="text" th:placeholder="${user.address.street}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Stadt:</td>
-                        <td class="tg-lap0"><input th:name="city" type="text" th:placeholder="${person.address.city}"/></td>
+                        <td class="tg-lap0"><input th:name="city" type="text" th:placeholder="${user.address.city}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Land:</td>
-                        <td class="tg-lap0"><input th:name="country" type="text" th:placeholder="${person.address.country}"/></td>
+                        <td class="tg-lap0"><input th:name="country" type="text" th:placeholder="${user.address.country}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Hausnummer:</td>
-                        <td class="tg-lap0"><input th:name="houseNumber" type="text" th:placeholder="${person.address.houseNumber}"/></td>
+                        <td class="tg-lap0"><input th:name="houseNumber" type="text" th:placeholder="${user.address.houseNumber}"/></td>
                     </tr>
                     <tr>
                         <td class="tg-lap0">Postleitzahl:</td>
-                        <td class="tg-lap0"><input th:name="postCode" type="text" th:placeholder="${person.address.postCode}"/></td>
+                        <td class="tg-lap0"><input th:name="postCode" type="text" th:placeholder="${user.address.postCode}"/></td>
                     </tr>
                 </table>
                 <td><button type="submit" class="btn btn-primary">Aktuallisieren</button></td>
